--- a/BirthCoach/Storyboards/MainStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/MainStoryboard_iPhone.storyboard
@@ -23,9 +23,12 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="startStopContraction:" destination="QqC-Gy-unH" eventType="touchUpInside" id="hwd-NH-ikV"/>
+                                </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="AEz-Rw-O3I">
-                                <rect key="frame" x="121" y="52" width="113" height="21"/>
+                                <rect key="frame" x="104" y="60" width="113" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -34,12 +37,26 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="startStopButton" destination="u3J-Vw-NHF" id="JVL-89-L55"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QOl-Qn-9I6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="117" y="166"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="BCBaseViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCBaseViewController.h"/>
+        </class>
+        <class className="BCRootViewController" superclassName="BCBaseViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCRootViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="startStopContraction:"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
