--- a/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -9,43 +9,25 @@
         <scene sceneID="dfE-Ea-m82">
             <objects>
                 <viewController id="QqC-Gy-unH" customClass="BCRootViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="lLu-Kn-5Xr">
+                    <view key="view" contentMode="scaleToFill" id="UTM-Kr-pAn">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u3J-Vw-NHF">
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Start Contraction">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="startStopContraction:" destination="QqC-Gy-unH" eventType="touchUpInside" id="hwd-NH-ikV"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AEz-Rw-O3I">
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="113" id="QEC-7B-FSP"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cpf-Qa-Y2s">
+                                <color key="backgroundColor" red="0.070588235294117646" green="0.43529411764705883" blue="0.53725490196078429" alpha="0.10000000000000001" colorSpace="calibratedRGB"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="AEz-Rw-O3I" firstAttribute="top" secondItem="lLu-Kn-5Xr" secondAttribute="top" constant="60" id="Snb-vN-LT9"/>
-                            <constraint firstItem="AEz-Rw-O3I" firstAttribute="centerX" secondItem="lLu-Kn-5Xr" secondAttribute="centerX" type="default" id="WTY-qD-9WQ"/>
-                            <constraint firstItem="AEz-Rw-O3I" firstAttribute="centerX" secondItem="u3J-Vw-NHF" secondAttribute="centerX" type="default" id="u5a-jR-WHE"/>
-                            <constraint firstItem="u3J-Vw-NHF" firstAttribute="top" secondItem="lLu-Kn-5Xr" secondAttribute="top" constant="135" id="zec-Gy-xeT"/>
+                            <constraint firstItem="Cpf-Qa-Y2s" firstAttribute="top" secondItem="UTM-Kr-pAn" secondAttribute="top" constant="40" id="6WQ-vx-PQe"/>
+                            <constraint firstItem="Cpf-Qa-Y2s" firstAttribute="trailing" secondItem="UTM-Kr-pAn" secondAttribute="trailing" type="default" id="Erk-ov-ncD"/>
+                            <constraint firstItem="Cpf-Qa-Y2s" firstAttribute="leading" secondItem="UTM-Kr-pAn" secondAttribute="leading" type="default" id="WKi-qM-hfh"/>
+                            <constraint firstAttribute="bottom" secondItem="Cpf-Qa-Y2s" secondAttribute="bottom" constant="387" id="yeS-8E-qpS"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="startStopButton" destination="u3J-Vw-NHF" id="JVL-89-L55"/>
-                        <outlet property="timerLabel" destination="AEz-Rw-O3I" id="65L-Vp-JG8"/>
+                        <outlet property="timerBackgroundView" destination="Cpf-Qa-Y2s" id="Ga9-c9-tVw"/>
+                        <outlet property="view" destination="UTM-Kr-pAn" id="FNN-Ph-uGo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QOl-Qn-9I6" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -60,7 +42,9 @@
         <class className="BCRootViewController" superclassName="BCBaseViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCRootViewController.h"/>
             <relationships>
+                <relationship kind="action" name="startStopContraction:"/>
                 <relationship kind="outlet" name="startStopButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="timerBackgroundView" candidateClass="UIView"/>
                 <relationship kind="outlet" name="timerLabel" candidateClass="UILabel"/>
             </relationships>
         </class>
