--- a/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -14,19 +14,64 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cpf-Qa-Y2s">
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5fc-QZ-lLx">
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="84" id="olO-s2-x86"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <state key="normal" image="start-button.png">
+                                            <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="highlighted">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="1:08:23" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eQf-Pf-xzs">
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="56" id="QKq-1f-1FC"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="55"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="NEXT CONTRACTION ESTIMATE" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dt8-Gn-Lyq">
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="265" id="oSA-3q-lXL"/>
+                                            <constraint firstAttribute="height" constant="21" id="qDp-bw-ddo"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="12"/>
+                                        <color key="textColor" red="0.37254901960784315" green="0.69411764705882351" blue="0.72549019607843135" alpha="0.70000000000000007" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <color key="backgroundColor" red="0.070588235294117646" green="0.43529411764705883" blue="0.53725490196078429" alpha="0.10000000000000001" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="5fc-QZ-lLx" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="1lc-NL-t46"/>
+                                    <constraint firstAttribute="bottom" secondItem="Dt8-Gn-Lyq" secondAttribute="bottom" constant="23" id="Ba4-Xz-HyK"/>
+                                    <constraint firstItem="5fc-QZ-lLx" firstAttribute="top" secondItem="Cpf-Qa-Y2s" secondAttribute="top" type="default" id="JtT-XX-Gai"/>
+                                    <constraint firstItem="5fc-QZ-lLx" firstAttribute="bottom" secondItem="Cpf-Qa-Y2s" secondAttribute="bottom" type="default" id="OzV-KD-8wh"/>
+                                    <constraint firstItem="eQf-Pf-xzs" firstAttribute="leading" secondItem="Cpf-Qa-Y2s" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="QL9-LX-3H7"/>
+                                    <constraint firstItem="eQf-Pf-xzs" firstAttribute="top" secondItem="Cpf-Qa-Y2s" secondAttribute="top" constant="22" id="azF-0e-AdP"/>
+                                    <constraint firstItem="5fc-QZ-lLx" firstAttribute="leading" secondItem="eQf-Pf-xzs" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="q0U-Bv-h7m"/>
+                                    <constraint firstItem="Dt8-Gn-Lyq" firstAttribute="leading" secondItem="Cpf-Qa-Y2s" secondAttribute="leading" constant="25" id="qg6-Lq-yvM"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Cpf-Qa-Y2s" firstAttribute="top" secondItem="UTM-Kr-pAn" secondAttribute="top" constant="40" id="6WQ-vx-PQe"/>
                             <constraint firstItem="Cpf-Qa-Y2s" firstAttribute="trailing" secondItem="UTM-Kr-pAn" secondAttribute="trailing" type="default" id="Erk-ov-ncD"/>
+                            <constraint firstAttribute="bottom" secondItem="Cpf-Qa-Y2s" secondAttribute="bottom" constant="386" id="Niv-hk-tzC"/>
                             <constraint firstItem="Cpf-Qa-Y2s" firstAttribute="leading" secondItem="UTM-Kr-pAn" secondAttribute="leading" type="default" id="WKi-qM-hfh"/>
-                            <constraint firstAttribute="bottom" secondItem="Cpf-Qa-Y2s" secondAttribute="bottom" constant="387" id="yeS-8E-qpS"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="nextContractionEstimateLabel" destination="Dt8-Gn-Lyq" id="Yur-zC-g4I"/>
+                        <outlet property="startStopButton" destination="5fc-QZ-lLx" id="Ys9-Xr-fad"/>
                         <outlet property="timerBackgroundView" destination="Cpf-Qa-Y2s" id="Ga9-c9-tVw"/>
+                        <outlet property="timerLabel" destination="eQf-Pf-xzs" id="D3e-vM-FDj"/>
                         <outlet property="view" destination="UTM-Kr-pAn" id="FNN-Ph-uGo"/>
                     </connections>
                 </viewController>
@@ -35,6 +80,9 @@
             <point key="canvasLocation" x="117" y="166"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="start-button.png" width="60" height="80"/>
+    </resources>
     <classes>
         <class className="BCBaseViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCBaseViewController.h"/>
