--- a/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="QqC-Gy-unH">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="QqC-Gy-unH">
     <dependencies>
         <deployment version="1536" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
@@ -13,12 +13,13 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cpf-Qa-Y2s">
+                            <view contentMode="scaleToFill" id="Cpf-Qa-Y2s">
+                                <rect key="frame" x="0.0" y="40" width="320" height="122"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5fc-QZ-lLx">
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="84" id="olO-s2-x86"/>
-                                        </constraints>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="5fc-QZ-lLx">
+                                        <rect key="frame" x="216" y="0.0" width="84" height="122"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                         <state key="normal" image="start-button.png">
                                             <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -27,45 +28,29 @@
                                         <state key="highlighted">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="startStopContraction:" destination="QqC-Gy-unH" eventType="touchUpInside" id="GSw-Ha-gAp"/>
+                                        </connections>
                                     </button>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="1:08:23" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eQf-Pf-xzs">
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="56" id="QKq-1f-1FC"/>
-                                        </constraints>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="1:08:23" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="eQf-Pf-xzs">
+                                        <rect key="frame" x="20" y="22" width="188" height="56"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="55"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="NEXT CONTRACTION ESTIMATE" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dt8-Gn-Lyq">
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="265" id="oSA-3q-lXL"/>
-                                            <constraint firstAttribute="height" constant="21" id="qDp-bw-ddo"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="12"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="NEXT CONTRACTION ESTIMATE" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Dt8-Gn-Lyq">
+                                        <rect key="frame" x="26" y="81" width="189" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="13"/>
                                         <color key="textColor" red="0.37254901960784315" green="0.69411764705882351" blue="0.72549019607843135" alpha="0.70000000000000007" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" red="0.070588235294117646" green="0.43529411764705883" blue="0.53725490196078429" alpha="0.10000000000000001" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="5fc-QZ-lLx" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="1lc-NL-t46"/>
-                                    <constraint firstAttribute="bottom" secondItem="Dt8-Gn-Lyq" secondAttribute="bottom" constant="23" id="Ba4-Xz-HyK"/>
-                                    <constraint firstItem="5fc-QZ-lLx" firstAttribute="top" secondItem="Cpf-Qa-Y2s" secondAttribute="top" type="default" id="JtT-XX-Gai"/>
-                                    <constraint firstItem="5fc-QZ-lLx" firstAttribute="bottom" secondItem="Cpf-Qa-Y2s" secondAttribute="bottom" type="default" id="OzV-KD-8wh"/>
-                                    <constraint firstItem="eQf-Pf-xzs" firstAttribute="leading" secondItem="Cpf-Qa-Y2s" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="QL9-LX-3H7"/>
-                                    <constraint firstItem="eQf-Pf-xzs" firstAttribute="top" secondItem="Cpf-Qa-Y2s" secondAttribute="top" constant="22" id="azF-0e-AdP"/>
-                                    <constraint firstItem="5fc-QZ-lLx" firstAttribute="leading" secondItem="eQf-Pf-xzs" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="q0U-Bv-h7m"/>
-                                    <constraint firstItem="Dt8-Gn-Lyq" firstAttribute="leading" secondItem="Cpf-Qa-Y2s" secondAttribute="leading" constant="25" id="qg6-Lq-yvM"/>
-                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="Cpf-Qa-Y2s" firstAttribute="top" secondItem="UTM-Kr-pAn" secondAttribute="top" constant="40" id="6WQ-vx-PQe"/>
-                            <constraint firstItem="Cpf-Qa-Y2s" firstAttribute="trailing" secondItem="UTM-Kr-pAn" secondAttribute="trailing" type="default" id="Erk-ov-ncD"/>
-                            <constraint firstAttribute="bottom" secondItem="Cpf-Qa-Y2s" secondAttribute="bottom" constant="386" id="Niv-hk-tzC"/>
-                            <constraint firstItem="Cpf-Qa-Y2s" firstAttribute="leading" secondItem="UTM-Kr-pAn" secondAttribute="leading" type="default" id="WKi-qM-hfh"/>
-                        </constraints>
                     </view>
                     <connections>
                         <outlet property="nextContractionEstimateLabel" destination="Dt8-Gn-Lyq" id="Yur-zC-g4I"/>
@@ -77,7 +62,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QOl-Qn-9I6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="117" y="166"/>
+            <point key="canvasLocation" x="-34" y="61"/>
         </scene>
     </scenes>
     <resources>
@@ -91,13 +76,11 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCRootViewController.h"/>
             <relationships>
                 <relationship kind="action" name="startStopContraction:"/>
+                <relationship kind="outlet" name="nextContractionEstimateLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="startStopButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="timerBackgroundView" candidateClass="UIView"/>
                 <relationship kind="outlet" name="timerLabel" candidateClass="UILabel"/>
             </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
