--- a/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -534,6 +534,7 @@
                         <outlet property="durationHeaderLabel" destination="MYx-7H-Knp" id="3Ov-TJ-fsp"/>
                         <outlet property="frequencyHeaderLabel" destination="N8M-Lp-RlO" id="M3e-0U-twM"/>
                         <outlet property="frequencyTableView" destination="Sla-Gh-2o1" id="52b-CE-76I"/>
+                        <outlet property="headerContainerView" destination="ffW-f4-RNY" id="wFo-M8-JKt"/>
                         <outlet property="intensityHeaderLabel" destination="Wcr-oQ-Pp2" id="ucG-rD-0ca"/>
                     </connections>
                 </viewController>
@@ -580,6 +581,9 @@
         </class>
         <class className="BCFrequencyCell" superclassName="UITableViewCell">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCFrequencyCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="frequencyLabel" candidateClass="UILabel"/>
+            </relationships>
         </class>
         <class className="BCHistoryViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCHistoryViewController.h"/>
